--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
 
 :root {
     --laranja-claro: #FF862A;
+    --alto-contraste-fundo: #000000;
+    --alto-contraste-texto: #ffffff;
+    --alto-contraste-link: #ffd700;
+
 }
 
 body {
